fix: table overflow scroll

--- a/components/table.scss
+++ b/components/table.scss
@@ -2,6 +2,7 @@
   $b: #{&};
   width: 100%;
 
+  overflow: scroll;
   border-spacing: 0;
   border-collapse: collapse;
 
